2013-10-14  Tobias Burnus  <burnus@net-b.de>

	PR fortran/58658
	* expr.c (gfc_check_vardef_context): Fix pointer diagnostic
	for CLASS(*).

2013-10-11  Jakub Jelinek  <jakub@redhat.com>

	* trans-openmp.c (gfc_omp_clause_default_ctor,
	gfc_omp_clause_dtor): Return NULL for OMP_CLAUSE_REDUCTION.
	* f95-lang.c (ATTR_NULL, DEF_FUNCTION_TYPE_8): Define.
	* types.def (DEF_FUNCTION_TYPE_8): Document.
	(BT_FN_VOID_OMPFN_PTR_UINT,
	BT_FN_VOID_OMPFN_PTR_UINT_LONG_LONG_LONG,
	BT_FN_VOID_OMPFN_PTR_UINT_LONG_LONG_LONG_LONG,
	BT_FN_VOID_OMPFN_PTR_OMPCPYFN_LONG_LONG_BOOL_UINT): Remove.
	(BT_FN_VOID_OMPFN_PTR_UINT_UINT_UINT,
	BT_FN_VOID_OMPFN_PTR_UINT_LONG_LONG_LONG_UINT,
	BT_FN_VOID_OMPFN_PTR_UINT_LONG_LONG_LONG_LONG_UINT,
	BT_FN_BOOL_INT, BT_FN_BOOL_INT_BOOL, BT_FN_VOID_UINT_UINT,
	BT_FN_VOID_INT_PTR_SIZE_PTR_PTR_PTR,
	BT_FN_VOID_INT_OMPFN_PTR_SIZE_PTR_PTR_PTR,
	BT_FN_VOID_OMPFN_PTR_OMPCPYFN_LONG_LONG_BOOL_UINT_PTR): New.

2013-10-10  Tobias Burnus  <burnus@net-b.de>

	PR fortran/58226
	* options.c (gfc_get_option_string): Handle zero arg case.

2013-10-02  Tobias Burnus  <burnus@net-b.de>

	PR fortran/58593
	* trans-expr.c (gfc_conv_string_tmp): Fix obtaining
	the byte size of a single character.

2013-10-01  Tobias Burnus  <burnus@net-b.de>

	PR fortran/58579
	* trans-expr.c (gfc_conv_string_tmp): Correctly obtain
	the byte size of a single character.

2013-09-27  Janne Blomqvist  <jb@gcc.gnu.org>

	* intrinsic.texi (DATE_AND_TIME): Fix example.

2013-09-25  Tobias Burnus  <burnus@net-b.de>

	PR fortran/58436
	* class.c (generate_finalization_wrapper): Handle CLASS(*).

2013-09-25  Tobias Burnus  <burnus@net-b.de>

	PR fortran/57697
	PR fortran/58469
	* resolve.c (generate_component_assignments): Avoid double free
	at runtime and freeing a still-being used expr.

2013-09-25  Tom Tromey  <tromey@redhat.com>

	* Make-lang.in (fortran_OBJS): Use fortran/gfortranspec.o.
	(gfortranspec.o): Remove.
	(CFLAGS-fortran/gfortranspec.o): New variable.
	(GFORTRAN_D_OBJS): Update.