@@ -1,3 +1,9 @@
+2013-10-15  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/58652
+	* trans-intrinsic.c (conv_intrinsic_move_alloc): Fix handling
+	of CLASS(*) variables.
+
 2013-10-14  Tobias Burnus  <burnus@net-b.de>
 
 	PR fortran/58658
